ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: graffiti
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
  - graffiti.sspcloud.fr
rules:
  - host: graffiti.sspcloud.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: graffiti
            servicePort: http
